examples/test/testpolicy1795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1795
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key11: value24
      key1: value10
      key28: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value5
          key44: value19
      podSelector:
        matchLabels:
          key13: value43
